syntax = "proto3";
option go_package = "exampleauth/protos";

import "google/protobuf/empty.proto";

message User {
  string first_name = 1;
  string last_name = 2;
  string email_address = 3;
}

message Seat {
  string section_id = 1;
  string seat_id = 2;
}

message PurchaseRequest{
  User user = 1;
  Seat seat = 2;
  // You can also include PaymentDetails
}

message Booking {
  string booking_id = 1;
  User user = 2;
  Seat seat = 3;
  string from = 4;
  string to = 5;
  double price_paid = 6;
}


message GetBookingsBySectionRequest {
  string section = 1;
}

message ModifySeatRequest {
  string booking_id = 1;
  string new_seat_id = 2;
  string new_section_id = 3;
}

message RemoveBookingRequest {
  string booking_id = 1;
}

service BookingService {
  // Public APIs (Guest can use this)
  rpc Purchase(PurchaseRequest) returns (Booking) {}

  // Gets bookings made by current user (user must be authenticated)
  rpc GetUserBookings(google.protobuf.Empty) returns (stream Booking) {}

  // Admin APIs
  rpc GetBookingsBySection(GetBookingsBySectionRequest) returns (stream Booking) {}
  rpc RemoveUserFromTrain(RemoveBookingRequest) returns (google.protobuf.Empty) {}
  rpc ModifySeat(ModifySeatRequest) returns (Booking) {}
}